--- a/app/views/group/posts/new.html.erb
+++ b/app/views/group/posts/new.html.erb
@@ -1,4 +1,12 @@
-<h4 class='border'>
-  发表话题
-</h4>
-<%= render 'form' %>
+
+<div class='row'>
+  <div class='span-l'>
+    <h4 class='border'>
+      发表话题
+    </h4>
+    <%= render 'form' %>
+  </div>
+  <div class='span-r pull-right'>
+
+  </div>
+</div>
