--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,5 +8,9 @@
   </div>
   <div class='span-r pull-right'>
     <%= render 'meta' %>
+    <%- if @current_group.is_class %>
+      
+    <% end %>
+    <%= render 'new_members' %>
   </div>
 </div>
