--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -1,3 +1,10 @@
+.tip {
+    background-color: #FFEFC6;
+    border-radius: 5px 5px 5px 5px;
+    color: #735005;
+    padding-top: 8px;
+}
+
 .dropdown-menu{
     min-width: 100px;
 }
@@ -28,6 +35,7 @@ li.list-item:hover {
 li .avatar{
     float:left;
     width: 60px;
+    margin-right: 10px;
 }    
 
 li .content{
