--- a/app/views/group/posts/_form.html.erb
+++ b/app/views/group/posts/_form.html.erb
@@ -1,11 +1,11 @@
-<%= simple_form_for [:webclass, @current_webclass, @post], :validate => true do |f| %>
+<%= simple_form_for [@current_namespace, @post].flatten, :validate => true do |f| %>
   <% @post.errors.full_messages.each do |msg| %>
       <p><%= msg %></p>
     <% end %>
     <%= f.input :title, label: '标题' %>
     <%= f.input :tag_list, label: '分类标签', hint: '请选择或创建一个分类标签(可选)', input_html: {id: 'post-tags'} %>
     <%= f.input :body, as: :kindeditor, label: false, input_html: {simple_mode: true, width: 500, height: 300 } %>
-    <%= f.submit '提交', disable_with: "正在提交...", class: 'btn btn-info' %>
+    <%= f.submit '提交', disable_with: "正在提交...", class: 'btn btn-primary' %>
 <% end %>
 
 <%= javascript_tag do %>
@@ -13,7 +13,7 @@ $(document).ready(function() {
   $("#post-tags").tagit({
     singleFieldDelimiter: ' ',
     tagLimit: 3,
-    availableTags: [<%= raw post_tags(@current_webclass.owned_tags) %>]
+    availableTags: [<%= raw post_tags(@current_group.owned_tags) %>]
   });
 });
 <% end %>
