--- a/app/views/group/settings/_menu.html.erb
+++ b/app/views/group/settings/_menu.html.erb
@@ -1,9 +1,9 @@
 <div class='row'>
   <div class='span2'>
     <%= tabs_tag(:namespace => :webclass_admin_nav, :open_tabs => {:class => "nav nav-tabs nav-stacked"}, :builder =>     MenuTabBuilder) do |tab| %>
-      <%= tab.index "基本设置", webclass_webclass_settings_path(@current_webclass) %>
-      <%= tab.sections "课时管理", admin_webclass_webclass_sections_path(@current_webclass) %>
-      <%= tab.courses "课程管理", admin_webclass_webclass_courses_path(@current_webclass) %>
+      <%= tab.index "基本设置", [@current_namespace, :settings].flatten %>
+      <%= tab.sections "课时管理", [@current_namespace, :sections].flatten %>
+      <%= tab.courses "课程管理", [@current_namespace, :courses].flatten %>
     <% end %>
   </div>
 </div>
