--- a/app/views/group/settings/admin.html.erb
+++ b/app/views/group/settings/admin.html.erb
@@ -1,12 +1,9 @@
 <div class='row'>
   <div class='span-l'>
+    <h4 class='border'>基本设置</h4>
     <%= render 'form' %>
   </div>
   <div class='span-r pull-right'>
     <%= render 'menu' %>
   </div>
 </div>
-
-<%- content_for :left do %>
-  <h3><%= @current_webclass.name %></h3>
-<% end %>
