--- a/app/views/shared/media/_add_btn.html.erb
+++ b/app/views/shared/media/_add_btn.html.erb
@@ -1,12 +1,12 @@
 <div class="btn-group pull-right">
-  <a class="btn dropdown-toggle btn-success btn-small" data-toggle="dropdown" href="#">
-    添加课件
+  <a class="btn dropdown-toggle btn-success btn-small span" data-toggle="dropdown" href="#">
+    添加文件
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu">
-    <%- folders.each do |folder| %>
+    <%- @folders.each do |folder| %>
       <li>
-        <%=link_to folder.name, [:new, namespace, folder, :medium].flatten %>
+        <%=link_to folder.name, [:new, @current_namespace, folder, :medium].flatten %>
       </li>
     <% end %>
   </ul>
