--- a/app/views/shared/media/_medium.html.erb
+++ b/app/views/shared/media/_medium.html.erb
@@ -4,8 +4,8 @@
   </td>
   <td><%= link_to medium.file_name, medium.file_url %></td> 
   <td><%= number_to_human_size medium.file_size %></td>
-  <td><%= link_to medium.mediumable.name, [namespace, medium.mediumable].flatten %></td>
   <td><%= format_datetime medium.created_at %></td>
+  <td><%= link_to medium.mediumable.name, [@current_namespace, medium.mediumable].flatten %></td>
   <td>
     <%- if medium.creator_id == current_user.id or @current_member.admin %>
       <%= link_to '删除', [medium].flatten, method: :delete, remote: true, data: {type: 'script'}, class: 'btn btn-danger btn-small', confirm: "是否确定删除 #{medium.file_name}" %>
