--- a/app/views/shared/posts/_add_btn.html.erb
+++ b/app/views/shared/posts/_add_btn.html.erb
@@ -7,7 +7,7 @@
   <ul class="dropdown-menu">
     <%- categories.each do |category| %>
       <li>
-        <%=link_to category.name, [:new, namespace, category, :post].flatten %>
+        <%=link_to category.name, [:new, @current_namespace, category, :post].flatten %>
       </li>
     <% end %>
   </ul>
