--- a/app/views/shared/posts/_post.html.erb
+++ b/app/views/shared/posts/_post.html.erb
@@ -5,17 +5,23 @@
   </div>
   <div class='content'>    
     <h4 class='border'>
-      <%= link_to post.title, [namespace, post].flatten %>
+      <%= link_to post.title, [@current_namespace, post].flatten %>
 
-      <%= link_to '删除', [namespace, post].flatten, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{post.title}" %>
+      <%= link_to [@current_namespace, post].flatten, method: :delete, class: 'btn btn-small btn-danger pull-right span', confirm: "是否删除 #{post.title}" do %>
+        <i class='icon icon-ban-circle'></i>
+        <span>删除</span>
+      <% end %>
 
-      <%= link_to '编辑', [:edit, namespace, post].flatten, class: 'btn btn-small btn-info pull-right span' %>
+      <%= link_to [:edit, @current_namespace, post].flatten, class: 'btn btn-small btn-info pull-right span' do %>
+        <i class='icon icon-edit'></i>
+        <span>编辑</span>
+      <% end %>
     </h4>
     <p>
       <%- if truncate_size %>
         <%= truncate post.body, :length => truncate_size, :omission => '......' %>
       <% else %>
-        <%= post.body %>
+        <%= raw post.body %>
       <% end %>
     </p>
     <div class='item item-info clearfix'>
