--- a/app/views/user/albums/index.html.erb
+++ b/app/views/user/albums/index.html.erb
@@ -5,9 +5,9 @@
       <%= render 'shared/images/show_btn' %>
     </h4>
     <div id='album-list'>
-      <%= render 'list' %>
+      <%= render 'shared/albums/admin_list' %>
     </div>
-    <%= render partial: 'shared/albums/form' %>
+    <%= render 'shared/albums/form' %>
   </div>
 
   <div class='span-r pull-right'>
