--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -2,7 +2,7 @@
     background-color: #FFEFC6;
     border-radius: 5px 5px 5px 5px;
     color: #735005;
-    padding-top: 8px;
+    padding: 5px;
 }
 
 .dropdown-menu{
