--- a/app/views/groups/_menu.html.erb
+++ b/app/views/groups/_menu.html.erb
@@ -1,7 +1,7 @@
 <%= tabs_tag(:namespace => :group_nav, :open_tabs => {:class => "nav nav-tabs"}, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.index "主页", @current_group %>
   <%= tab.posts "话题", group_group_posts_path(@current_group) %>
-  <%= tab.albums "相册", group_group_albums_path(@current_group) %>
+  <%= tab.images "相册", group_group_images_path(@current_group) %>
   <%= tab.members "成员", group_group_members_path(@current_group) %>
   <% if @current_group.is_class %>
     <%= tab.courses "课程", group_group_courses_path(@current_group) %>
