--- a/app/views/shared/albums/create.js.erb
+++ b/app/views/shared/albums/create.js.erb
@@ -1,3 +1,3 @@
-$('#albums').append("<%= escape_javascript render('album', album: @album) %>");
+$('#albums').append("<%= escape_javascript render('shared/albums/album', album: @album) %>");
 $('#album-<%= @album.id %>').effect("highlight", {}, 2000);
 $('#album-form').trigger('reset');
