--- a/app/views/user/folders/index.html.erb
+++ b/app/views/user/folders/index.html.erb
@@ -2,15 +2,15 @@
   <div class='span-l'>
     <h4>
       目录管理
-      <%= render partial: 'shared/media/add', locals: {namespace: [:user, current_user], folders: @folders} %>
+      <%= render partial: 'shared/media/show_btn' %>
     </h4>
-    <div class='folder-list'>
-      <%= render 'list' %>
+    <div ='folder-list'>
+      <%= render 'shared/folders/admin_list' %>
     </div>
-    <%= render 'form' %>
+    <%= render 'shared/folders/form' %>
   </div>
 
   <div class='span-r pull-right'>
-    <%= render 'shared/folders/list' %>
+
   </div>
 </div>
