--- a/app/views/user/media/index.html.erb
+++ b/app/views/user/media/index.html.erb
@@ -2,7 +2,7 @@
   <div class='span-l'>
     <h4 class='border'>
       全部课件
-      <%= render 'shared/media/add' %>
+      <%= render 'shared/media/add_btn' %>
     </h4>
     <table class='table'>
       <thead>
@@ -16,13 +16,16 @@
         </tr>
       </thead>
       <tbody id='media-list'>
-        <%= render partial: 'shared/media/medium', collection: @media, locals: {namespace: [:user, current_user]} %>
+        <%= render partial: 'shared/media/medium', collection: @media %>
       </tbody>
     </table>
     <%= paginate @media %>
   </div>
 
   <div class='span-r pull-right'>
-    <%= render partial: 'shared/folders/list', locals: {namespace: [:user, current_user], folders: @folders}  %>
+    <%- if @current_user.id == current_user.id %>
+      <%= link_to '目录管理', [@current_namespace, :folders].flatten, class: 'btn btn-info btn-small' %>
+    <% end %>
+    <%= render 'shared/folders/list' %>
   </div>
 </div>
