--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class='span-r pull-right'>
     <%- if current_user.id == @current_user.id  %>
-      <%= link_to "分类管理", [:user, current_user, :categories], class: 'btn btn-info' %>
+      <%= link_to "分类管理", [:user, current_user, :categories], class: 'btn btn-info btn-small' %>
     <% end %>
     <%= render 'shared/categories/list' %>
   </div>
