--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div id="page" class="container">
+    <div id="user-page" class="container">
       <div class="row">
         <div class='span-l'>
           <%= render 'users/profile' %>
