--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,23 @@
-<div class='left'>
-
-</div>
-<div class='right'>  
-  <section class='posts'>
-    <%- if @posts.any? %>
-      <%= render @posts %>
+<div class='span-l'>
+  <div class='row'>
+    <div class='span-l'>
+      <%= render 'subjects' %>
+    </div>
+    <div class='span-r'>
+      <ul>
+        <%- @posts.each do |post| %>
+          <li>
+            <%= link_to post.title, [:user, post.creator, post] %>
+          <li>
+        <% end %>
+        <%# render partial: 'shared/posts/post', collection: @posts, truncate_size: 172} %>
+      </ul>
       <%= paginate @posts %>
-    <%- else %>
-      p No posts yet.
-    <% end %>
-  </section>
+
+    </div>
+  </div>
 </div>
-
-
+<div class='span-r'>
+  <%= link_to '我要提问', new_question_path, class: 'btn btn-success pull-right' %>
+</div>
+ 
