--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -18,42 +18,6 @@ ul, ol {
     margin: 0 0 5px 5px;
 }
 
-li.list-item{
-    float:left;
-    margin-bottom: 10px;
-    background-color: #F8F9F4;
-    -webkit-border-radius: 5px; 
-    border-radius: 5px;
-    border: 1px solid #fff; 
-}
-
-li.list-item:hover {
-    background-color: #fff;
-    border: 1px solid #CEF7C3; 
-}
-
-li .avatar{
-    float:left;
-    width: 60px;
-    margin-right: 10px;
-}    
-
-li .content{
-    float: none;
-    overflow: hidden;
-    width: auto;
-    margin-left: 10px;
-}
-
-li .content span.time{
-    color: #999;
-}
-
-li .content .item span{
-    margin-right: 10px;
-    font-size: 12px;
-}
-
 h4.border {
     border-bottom: 1px solid #AAAAAA;
     padding-bottom: 8px;
@@ -137,13 +101,14 @@ div.field_with_errors, div.ui-effects-wrapper {
 
 .navbar .nav > li > a {
     padding: 12px;
-}
-
-.navbar .nav > li > a {
     color: #ddd;
     float: none;
     text-decoration: none;
     text-shadow: none;
+}
+
+.navbar .nav > li > a:hover {
+    color: #ccc;
 }
 
 .table thead tr.success > th {
