--- a/app/views/group/folders/index.html.erb
+++ b/app/views/group/folders/index.html.erb
@@ -4,7 +4,7 @@
       目录管理
       <%= render 'shared/media/show_btn' %>
     </h4>
-    <div id='folder-list'>
+    <div ='folder-list'>
       <%= render 'shared/folders/admin_list' %>
     </div>
     <%= render 'shared/folders/form' %>
