--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div id='page' class="container">
+    <div id='index-page' class="container">
       <div class="row">
         <%= bootstrap_flash %>
         <%= yield %>
