--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div id="page" class="container">
+    <div id="group-page" class="container">
       <div class="row">
         <div class='span-l'>
           <%= avatar_tag(@current_group, 'b') %>
