--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -7,5 +7,5 @@
     <%= f.input :body, as: :kindeditor, label: false, input_html: {simple_mode: true, width: 500, height: 300 }, :validate => {presence: true}  %>
     <%= f.input :tag_list, label: '标签' %>
 
-    <%= f.button :wrapped, value: '创建', :cancel => me_posts_path, disable_with: "正在提交..." %>
+    <%= f.submit class: 'btn btn-primary', disable_with: "正在提交..." %>
 <% end %>
