--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,14 @@
-<div class='span9'>
-	<%= render @questions %>
+<div class='span-l'>
+  <div class='row'>
+    <div class='span-l'></div>
+    <div class='span-r'>
+	    <ul id='questions'>
+        <%= render partial: 'shared/questions/question', collection: @questions, locals: {truncate_size: 172} %>
+      </ul>
+    </div>
+  </div>
 </div>
-<div class='span3'>
+<div class='span-r'>
   <%= link_to '我要提问', new_question_path, class: 'btn btn-success pull-right' %>
 </div>
+ 
