--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form' %>
+<div class='span-l'>
+  <h4 class='border'>
+    新建问题
+  </h4>
+  <%= render 'form' %>
+</div>
+<div class='span-r'>
+  
+</div>
+
+
