--- a/app/views/shared/categories/_list.html.erb
+++ b/app/views/shared/categories/_list.html.erb
@@ -5,7 +5,10 @@
       <%- @categories.each do |category| %>
         <tr>
           <td>
-            <%= link_to category.name, [:user, @current_user, category] %>
+            <%=link_to [@current_namespace, category].flatten do %>
+              <i class='icon icon-list'></i>
+              <%= category.name %>
+            <% end %>
           </td>
         </tr>
       <% end %>
