--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -11,7 +11,6 @@
     
   </div>
   <div class='span-r pull-right'>
-    slide
-    <%# render 'slide' %>
+    <%= render 'shared/categories/list' %>
   </div>
 </div>
