--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -6,7 +6,7 @@
      	<%= tab.posts raw("<i class='icon icon-edit'></i> 我的文章"), [:user, @current_user, :posts] %>
       <%= tab.images raw("<i class='icon icon-picture'></i> 我的相册"), [:user, @current_user, :images] %>
       <%= tab.media raw("<i class='icon icon-folder-open'></i> 我的课件"), [:user, @current_user, :media] %>
-      <%= tab.questions raw("<i class='icon icon-question-sign'></i> 我的问答"), [:user, @current_user, @questions] %>
+      <%= tab.questions raw("<i class='icon icon-question-sign'></i> 我的问答"), [:user, @current_user, :questions] %>
       <%= tab.groups raw("<i class='icon icon-group'></i> 我的群组"), [:user, @current_user, :groups] %>
       <%= tab.webclasses raw("<i class='icon icon-calendar'></i> 我的班级"), [:user, @current_user, :webclasses] %>
 
