--- a/app/views/group/posts/index.html.erb
+++ b/app/views/group/posts/index.html.erb
@@ -7,7 +7,7 @@
         <span>发表话题</span>
       <% end %>
     </h4>
-    <ul>
+    <ul id='posts'>
       <%= render partial: 'shared/posts/post', collection: @posts, locals: {truncate_size: 172} %>
     </ul>
   </div>
