--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,5 +1,8 @@
-.list-item-li{
-    float:left;
+ul#image-text-list{
+    @extend .clearfix;
+}
+
+ul#image-text-list li{
     margin-bottom: 10px;
     background-color: #F8F9F4;
     -webkit-border-radius: 5px; 
@@ -7,7 +10,7 @@
     border: 1px solid #fff; 
 }
 
-.list-item-li:hover {
+ul#image-text-list li:hover {
     background-color: #fff;
     border: 1px solid #CEF7C3; 
 }
@@ -22,35 +25,49 @@
 .dropdown-menu{
     min-width: 100px;
 }
+
 select {
     width: auto;
 }
+
 .nav {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
+
 ul, ol {
-    margin: 0 0 5px 5px;
+    margin: 0px;
 }
 
 h4.border {
-    border-bottom: 1px solid #AAAAAA;
+    @extend .clearfix;
+    border-bottom: 1px solid #ddd;
     padding-bottom: 8px;
     padding-top: 8px;
+    color: #555;
 }
-.item .line{
+
+ul#top_users{
+  li{
+    margin: 5px 0;
+  }
+
+  li .avatar{
+      float:left;
+      width: 50px;
+      margin-right: 10px;
+  }    
+  
+  li .content{
+      float: none;
+      overflow: hidden;
+      width: auto;
+      margin-left: 10px;
+  }
+}
+
+li.dashed{
     border-bottom: dashed 1px #ccc;
-    margin-top: 1px;
-    margin-bottom: 5px;
-}
-
-.item .row{
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.item ul li{
-    color: #666;
-    font-size: 12px;
+    padding: 5px 0px
 }
 
 .item .title{
