--- a/app/views/shared/_subjects.html.erb
+++ b/app/views/shared/_subjects.html.erb
@@ -1,11 +1,11 @@
 <ul id="subjects_nav" class="mega-menu">
   <%- Grade.child_grade.each do |grade| %>
     <li>
-      <%= link_to grade.name, [grade, :media] %>
+      <%= link_to grade.name, [grade, resource] %>
       <ul>
         <%- grade.subjects.each do |subject| %>
           <li>
-            <%= link_to subject.name, [subject, :media] %>
+            <%= link_to subject.name, [subject, resource] %>
           </li>
         <% end %>
       </ul>
