--- a/app/views/group/assignments/new.html.erb
+++ b/app/views/group/assignments/new.html.erb
@@ -4,6 +4,6 @@
     <%= render 'form' %>
   </div>
   <div class='span-r pull-right'>
-    <%= render 'courses' %>
+    <%= render 'group/courses/courses' %>
   </div>
 </div>
