--- a/app/views/group/sections/_section.html.erb
+++ b/app/views/group/sections/_section.html.erb
@@ -2,6 +2,6 @@
 <td><%= format_time section.start_at %></td>
 <td><%= format_time section.end_at %></td>
 <td>
-  <%= link_to '修改', edit_webclass_webclass_section_path(@current_webclass, section), remote: true, data: {type: "script"} %>
-  <%= link_to '删除', webclass_webclass_section_path(@current_webclass, section), remote: true, method: :delete, data: {type: "script"} %>
+  <%= link_to '修改', [:edit, :group, @current_group, section], remote: true, data: {type: "script"} %>
+  <%= link_to '删除', [:group, @current_group, section], remote: true, method: :delete, data: {type: "script"} %>
 </td>
