--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
-<li id='user-<%= user.id %>' class='list-item-li'>
+<li id='user-<%= user.id %>' class='hover'>
   <div class='avatar'>
     <%= link_to user_avatar_tag(user, 'm'), user %>
   </div>
