--- a/app/views/users/_me.html.erb
+++ b/app/views/users/_me.html.erb
@@ -1,9 +1,8 @@
 <div class='span-l'>
-  
   <%- if @recommand_users.size > 10 %>
     <h4>您可能感兴趣的人<p class="text-warning">您关注的人少于10人， 系统为您推荐感兴趣的人</p>
 </h4>
-    <ul id='item-list' class='inline'>
+    <ul id='users' class='inline'>
   	  <%= render partial: 'follow', collection: @recommand_users, as: :user %>
     </ul>
   <% else %>
