--- a/app/views/group/courses/_form.html.erb
+++ b/app/views/group/courses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @course, url: webclass_webclass_courses_path(@current_webclass), validate: true, remote: true, :html => {:class => 'form-horizontal', id: 'slot-form', data: {type: "script", method: :post}} do |f| %>
+<%= simple_form_for @course, url: [:group, @current_group, @course], validate: true, remote: true, :html => {:class => 'form-horizontal', id: 'slot-form', data: {type: "script", method: :post}} do |f| %>
   <%= f.input :name, label: '名称' %>
   <%= f.input :week, as: :radio_buttons, :item_wrapper_class => 'inline', collection: weeks, label: '周时' %>
   <%= f.association :sections, as: :check_boxes, label: '课时', :item_wrapper_class => 'inline', collection: @sections %>
