--- a/app/views/group/messages/new.html.erb
+++ b/app/views/group/messages/new.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
   <div class='span-l'>
     <h4>写信</h4>
-    <%= simple_form_for [:webclass, @current_webclass, @message], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
+    <%= simple_form_for [:group, @current_group, @message], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
       <%= f.error_notification %>
       <%= f.association :recipient, :label => render('contacts'), :collection => @group_members, as: :grouped_select, group_method: :members, group_label_method: :name, value_method: :user_id, input_html: {multiple: 'multiple', id: 'recipient_ids'} %>
 
@@ -14,7 +14,3 @@
     <%= render 'shared/messages/actions' %>
   </div>
 </div>
-
-<%- content_for :left do %>
-  <h3><%= @current_webclass.name %></h3>
-<% end %>
