--- a/app/views/groups/_menu.html.erb
+++ b/app/views/groups/_menu.html.erb
@@ -11,6 +11,8 @@
   <% else %>
     <%= tab.media "资源共享", group_group_media_path(@current_group) %>
   <% end %>
+  <%= tab.admin "#{@current_group.title}设置", admin_group_group_settings_path(@current_group) %>
+
   <%- if @current_group_member and @current_group_member.active %>
     <%- if current_user.id == @current_group.creator_id  %>
       <%= link_to "#{@current_group.title}管理", admin_group_group_settings_path(@current_group), class: 'btn btn-info pull-right span' %>
