--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -9,6 +9,9 @@
       <div class="row">
         <div class='span-l'>
           <%= avatar_tag(@current_group, 'b') %>
+          <%- if @current_group.is_class %>
+            <p><%= @current_group.school.name %></p>
+          <% end %>
           <h4><%= @current_group.name %></h4>
           <p><%= @current_group.body %></p>
           <%= render 'groups/left' %>
