--- a/app/views/user/webclasses/_form.html.erb
+++ b/app/views/user/webclasses/_form.html.erb
@@ -1,10 +1,39 @@
-<%= simple_form_for [:me, @webclass], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
-  <%= f.error_notification %>
-  <%= f.input :name, :class=>'xlarge', :label => '名称' %>
-  <%= f.input :avatar, :label => '图标' %>
-  <%# f.input :kind_id, :label => t('kind'), :collection => Group.Kinds, :include_blank => false, :required => true %>
-  <%= f.input :body, label: '简介' %>
-  <div class="actions">
+<%= form_for [:user, current_user, @webclass], :html => {:class => 'form-stacked'}, validate: true do |f| -%> 
+  <%= f.label :name, '名称' %>
+  <%= f.text_field :name %>
+  <%= f.label :avatar, '图标' %>
+  <%= f.file_field :avatar %>
+  <%= f.label :school, '学校' %>
+
+  <%= select_tag :province_id, options_for_select(Province.all.collect{|i|[i.name, i.id]}), prompt: '请选择省份', 
+    data: {
+      remote: true,
+      url: '/ajax/get_cities_by_province',
+      update: "city-list",
+      type: 'script'
+    }, 
+    style: 'float:left'
+  %>
+
+  <%= select_tag :city_id, options_for_select([]), id: 'city-list', style: 'display: inline; float:left; margin-left:5px;' , prompt: '请选择城市', data: {
+      remote: true,
+      url: '/ajax/get_zones_by_city',
+      update: "zone-list",
+      type: 'script'
+    }
+  %>
+  <%= select_tag :zone_id, options_for_select([]), id: 'zone-list', style: 'display: inline; float:left; margin-left:5px;' , prompt: '请选择区县', data: {
+      remote: true,
+      url: '/ajax/get_schools_by_zone',
+      type: 'script'
+    }
+  %>
+  <%= f.select :school_id, options_for_select([]), html:{style: 'display: inline; float:left; margin-left:5px;'} , prompt: '请选择学校'
+  %>
+
+  <%= f.label :body, '简介' %>
+  <%= f.text_area :body %>
+  <div class="form-actions">
     <%= f.submit '创建', :class=>'btn btn-primary', disable_with: "正在提交..." %>
   </div>
 <% end %>
